@@ -4,7 +4,6 @@
 + Try to highlight selected region of cropped image (or darken unselected region)
 + use threading for preloading (move timeout_io to end of the other?)
 + why is light/dark grey no longer used for transparency?
-+ put custom actions into menu (right-click? edit? both?)
 
 Future
 + Side/bottom pane for thumbnails of all images in list (use .thumbnails?)
